--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.8.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize": "^6.35.2"
   }
 }
