--- a/crud/package.json
+++ b/crud/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mysql2": "^3.8.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "zlib": "^1.0.5"
   }
 }
