--- a/crud/package.json
+++ b/crud/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mysql2": "^3.8.0",
     "nodemon": "^3.0.3",
     "zlib": "^1.0.5"
